sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:16: error: not found: value j
		setValeur(i-j,v)
                            ^